@@ -318,9 +318,9 @@ class BrowseCardsDlg(QtGui.QDialog, Ui_BrowseCardsDlg, BrowseCardsDialog,
         self.card_model.setFilter("cards.active=1")
         self.card_model.select()
         self.update_card_counters()
-        self.card_type_tree_wdgt.card_type_tree.\
+        self.card_type_tree_wdgt.tree_wdgt.\
             itemClicked.connect(self.update_filter)
-        self.tag_tree_wdgt.tag_tree_wdgt.\
+        self.tag_tree_wdgt.tree_wdgt.\
             itemClicked.connect(self.update_filter)
         # Context menu.
         self.table.setContextMenuPolicy(QtCore.Qt.CustomContextMenu)
